@@ -1,0 +1,20 @@
+*.egg
+*.egg-info
+*.pyc
+*$py.class
+*.pt.py
+*.txt.py
+*~
+.coverage
+.tox/
+nosetests.xml
+pyramid/coverage.xml
+tutorial.db
+env26/
+env25/
+env24/
+env27/
+jyenv/
+pypyenv/
+build/
+dist/
