@@ -1,3 +1,3 @@
-Copyright (c) 2010 Agendaless Consulting and Contributors.
+Copyright (c) 2011 Agendaless Consulting and Contributors.
 (http://www.agendaless.com), All Rights Reserved
 
