@@ -36,8 +36,8 @@ setup(name='venusian',
         ],
       keywords='web wsgi zope',
       author="Chris McDonough, Agendaless Consulting",
-      author_email="repoze-dev@lists.repoze.org",
-      url="http://www.repoze.org",
+      author_email="pylons-devel@googlegroups.com",
+      url="http://pylonsproject.org",
       license="BSD-derived (http://www.repoze.org/LICENSE.txt)",
       packages=find_packages(),
       include_package_data=True,
